# JeuDeLaVie

./: CMakeLists.txt  Makefile  README.md  button.cpp  button.hpp  cell.cpp  cell.hpp  cursor.cpp  cursor.hpp  game.cpp  game.hpp  graphicsManager.cpp  graphicsManager.hpp  grid.cpp  grid.hpp  lib.cpp  lib.hpp  license.txt  main.cpp  menu.cpp  menu.hpp  ressources.rc  settings.cpp  settings.hpp  test.txt  textBox.cpp  textBox.hpp  version.rc
include/: button.hpp  cell.hpp  cursor.hpp  fonts.hpp  graphicsManager.hpp  grid.hpp  main.hpp
src/: button.cpp  cell.cpp  cursor.cpp  game.cpp  graphicsManager.cpp  grid.cpp  main.cpp  textBox.cpp
